# faiss-web-service

./: Dockerfile  docker-compose.yml  pyproject.toml
