[tool.poetry]
name = "Faiss search server"
version = "0.1.0"
description = ""
authors = ["fortunto2 <info@3dstr.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "1.1.1"
jsonschema = "3.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
